--- a/src/styles.css
+++ b/src/styles.css
@@ -58,6 +58,7 @@ button {
     border-bottom-right-radius: 0;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 button:focus {
